syntax = "proto3";

import "google/protobuf/empty.proto";

package peernode;
option go_package = "./peernode";


message HelloRequest {
    string name = 1;
}

message HelloResponse {
    string message = 1;
}

service HealthService {
    rpc SayHello (HelloRequest) returns (HelloResponse);
}

service ConsumerService {
    rpc ReceiveFileInfo (FileLink) returns (google.protobuf.Empty) {};
    rpc IsAlive (google.protobuf.Empty) returns (google.protobuf.Empty) {};
}

service MarketService {
    rpc AddFileRequest (FileHash) returns (google.protobuf.Empty) {};
    rpc GetFileRequests (FileHash) returns (FileRequestList) {};
}

message FileLink {
    string link = 1;
    string token = 2;
    string payment_address = 3;
}

message FileHash {
    string hash = 1;
}

message FileRequest {
    string ip = 1;
    int32 port = 2;
}

message FileRequestList {
    repeated FileRequest requests = 1;
}